aws/MOVE/ingress-identity-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "identity-alb"
  namespace: "camunda"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: camunda-identity

spec:
  rules:
    - host: identity.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-operate
                port:
                  number: 80
    - host: keycloak.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-keycloak
                port:
                  number: 80
